--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -16,164 +16,224 @@ tags:
   - "cracking the tech interview"
 description: A guide that helps you maximize your offer.
 prev: "/blog/get-a-job-3/"
-next: "/blog/get-a-job-2/"
+next: "/series/intro-to-climate-change/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
 discussLinkHN: https://news.ycombinator.com/item?id=20064900
 ---
 ![Negotiation](https://github.com/gautamtata/blog/blob/master/static/media/tech4.png?raw=true)
 
-Compensation is a huge factor when it comes to deciding between job offers. This section gives you a breakdown of the common components of compensation in the tech industry.
+Congratulations on getting the offer(s)! You may think that you've done the heavy-lifting, you've slogged through interviews and the hardest part is done. While that may be true for some, for most people **compensation** is a really important factor when it comes to deciding on which job they want to take.
 
-In most companies, your compensation will consist of base salary, a performance bonus and equity/stocks. For compensation data, check out [Levels.fyi](https://www.levels.fyi).
+Here, we will discuss a breakdown of a typical compensation package and then move on to negotiation.
 
-### Base salary
+## Table of Contents
+* Base Salary
+* Sign-On Bonus
+* Equity
+* Negotiation
 
-Base salary is a fixed amount of salary you get for showing up at work and is unaffected by how well the company is performing or the industry is doing. It is the only non-variable component of your compensation.
+## Base Salary
 
-Fresh graduates in the Bay Area can usually expect to get a base salary of above USD 100,000 (before taxes). The salary for fresh graduates at Facebook/Google is known to be in the USD 100,000 - 150,000 range.
+The base salary is the fixed amount of money that the company gives you every month for coming in to work. This is a **fixed** number and does not depend on your or your company's performance.
 
-Startups usually offer a bit higher for fresh graduate (USD 120,000 - 130,000) to make up for the lack of liquidity of the equity grant (not yet real cash).
+The base salary you get depends on which type of company it is: startup or established.
 
-Base salary doesn't increase linearly as you become more senior; it will plateau off eventually. As employees become increasingly senior within the company, the higher the proportion of their compensation comes from company-dependent factors such as bonus and equity. This is because senior employees are expected to influence the people around them and drive the company forward. A senior employee's performance will be based on how well the company does as a whole; the individual factor will not be as much.
+Startups usually give you a higher base-salary because their stock doesn't mean shit. You're taking a gamble on your stock being profitable in the future with a company that might fail and therefore you get a higher base.
 
-There are some exceptions to the system. Companies like Netflix pay top in the industry (sometimes even more than Facebook/Google) and give employees the option to receive their entire compensation as base salary, that is, to convert the equity component into their base. For the risk-adverse, this is a great choice.
+For interns, A base salary of 4-6K can be expected in most companies.
+For new-grads, The 2020 base salaries are starting at a more competitive range of **USD 120,000 - 150,000 annually.**
 
-### Bonus
+It's a common misconception that the higher up the chain you go the more your base salary increases. This is not true. While it does grow linearly but after you become a senior engineer/lead/manager, you get more equity as you're expected to lead your peers which increases your total compensation.
 
-Bonuses are usually paid on a semi-annual basis and are typically dependent on a few factors - level of seniority, individual performance in that time period, company performance in that time period.
+Companies that have more money like Netflix, Google, Facebook, etc are capable of offering more money if there are competing offers.
 
-- **Level of seniority** - This is usually a multiplier of the base salary, and the multiplier increases as the employee moves up the ranks
-- **Individual performance** - This is a multiplier of how well an employee performed in that time period. E.g. meeting expectations results in a 100% multiplier and exceeding expectations results in a >100% multiplier. Companies like Facebook and Apple reward their top performers handsomely, and the multiplier can go up to 300% for the extremely high-performing employees
-- **Company performance** - How well the company is doing. This multiplier will be the same for all employees
+## Sign-on bonus
 
-#### Examples
+This is a one-time payment that you get paid when you join the company. Most companies start with a base sign-on of $10,000 but it very easily goes up from 25000 - 50000.
 
-- Bob is a Software Engineer fresh out of college. His base salary is 100,000, is a fresh grad (seniority multiplier: 10%), crushed expectations for the half (individual performance multiplier: 200%) and his company did pretty well (company performance multiplier: 120%). For that half, his bonus will be as follows:
+Most companies have a clause in the contract that if you leave before the **one-year mark you need to return prorated amount.**
 
-  - **Bonus:** 100,000 x 50% (half a year) x 10% (seniority) x 200% (individual performance) x 120% (company performance) = 12000
+Another thing to remember is that bonuses are taxed on the highest bracket; Around 40-45%. Therefore, if you receive a single-sign-on bonus of $20,000 expect to receive around 13K.
 
-- Alice is an Engineering Manager with 10 years of professional experience. Her base salary is 220,000, is an experienced engineering manager (seniority multiplier: 20%), exceeded expectations for the half (individual performance multiplier: 150%) and her company did pretty awesome (company performance multiplier: 130%). For that half, her bonus will be as follows:
+## Equity/Stocks
 
-  - **Bonus:** 200,000 x 50% (half a year) x 20% (seniority) x 200% (individual performance) x 130% (company performance) = 39000
+The difference between tech companies and non-tech companies is equity. Tech workers get a share in the company; which is to motivate employees to work in the best interest of the company and can be a huge chunk of the total compensation.
 
-Hence the amount of bonus you receive can be highly variable and senior employees get a higher proportion of their compensation from bonuses.
+You can usually vest equity (When the whole amount is available to you) typically over 4 years. Most companies have what's called a **One-Year cliff** which means that you won't have any stocks available to you until the end of 1 year but then you will get your shares on a prorated basis of 1 month at a time for 3 years.
 
-### Equity/Stocks
+Stocks mean something when they are public. If a company has an initial public offering (IPO) their stocks have value. Startups will usually provide you with insane amounts of equity but they don't mean much until they IPO. So think about what you are getting into!
 
-Equity is what differentiates a tech job from a non-tech one. Equity means a share of the company; this signifies ownership and motivates employees to work in the best interests of the company. They can be a significant portion of one's compensation, sometimes even more than the base salary, especially for senior employees.
+Stocks can be granted in any number for a new-grad; from 50K - 400K over 4 years depending on your negotiation power.
 
-Equity usually vests (becomes available to you) over a period of time (typically 4 years) and can vest equally every month/quarter/year. A vesting cliff means the minimum period of time before your vesting begins. For example, if you are granted 4,800 shares over a 4 year schedule with a 1 year cliff, and monthly vesting, you will get 1,200 shares at the end of your first year and 100 shares every month thereafter for the subsequent 3 years.
+### Stock Options
 
-Until the company goes public or gets acquired, the equity is not worth anything. Be mindful of what you are getting yourself into!
+Stock options are usually given at mid-sized companies. They are different from the equity we discussed above called RSU's (Received stock units) which are given to you. Stock options are different in the sense that you have to purchase them. You are also permitted to purchase a limited number of stock but the good news is that you can purchase them at a **Strike Price** which is a price much lower than what the current-valuation of 1 stock is.
 
-Not all equity is treated equally. Depending on the company you join and which stage that company is at, you may receive one of the following types: stock options or stock grants.
+Example: If Company X gives you the purchasing power of 2000 stocks at a strike price of 10 dollars per stock at a valuation of 20 dollars per stock then you are essentially doubling your money.
 
-#### Stock options
+Value of 2000 stocks = 2000*20 = 40,000
 
-Stock options are typically given by mid-stage companies. Stock options are different from stocks, which represents the immediate ownership of a company! Stock options are the **option/right** to purchase stocks at a given strike price, hence it's not free. However, the cost of each stock is usually quite low and fixed at a strike price, which is equal to the fair market value of the stock when it was granted to you. You are guaranteed to be able to purchase the stock at that price regardless of future increases.
+Value of 2000 stocks at strike price = 2000*10 = 20,000
 
-When you leave a company, there is an exercise window (deadline given for you to exercise your options before they are gone), so it is important to have enough liquid cash to purchase them when planning a departure.
+Profit = 40000-20000 = $20,000
 
-#### Stock grants
-
-A stock grant is commonly referred to as a Restricted Stock Unit (RSU) and it means you possess the stock immediately. If the company is public, you can sell them during defined trading windows.
-
-More reading on the topic can be done [here](https://gist.github.com/yossorion/4965df74fd6da6cdc280ec57e83a202d).
-
-### Signing bonus
-
-This is a one-time lump sum that is paid to you when you join a company. This amount is typically in the range of USD 10,000 to USD 20,000 but can even go up to USD 50,000 (Google) and USD 100,000 (Facebook).
-
-There can be conditions attached to signing bonuses, such as having to return a pro-rated amount if an employee leaves before the one-year mark. Make sure you are aware of them before you sign the offer.
+**When you leave a company you are given an exercise window to exercise your stock options. It's very important to have cash-on-hand to purchase these stocks**
 
 ### Misc bonuses/perks
 
-While these perks are not exactly cash, they can help you save money which is almost equivalent to getting compensated more.
+While these perks are not exactly cash, they can help you save money and are also targeted at making your life easier. Some of those perks are:
 
-- Free meals - Food is not exactly cheap in the Bay Area and having some meals provided on weekdays can result in saving few thousand dollars a year
-- Relocation bonus - Helpful if you are moving from abroad, and this can partially offset costs due to relocating
-- Shuttle service - Public transportation in the Bay Area is not that great and the most common form of commute is driving. Being able to take a shuttle service helps in saving money on gas, transport, and freeing up your mind to do other things during the commute
+* Free Lunches/Dinner
+* 401K Matching
+* Paid Gym/Mobile Bill
+* Full Medical/Dental/Vision covered
+* Paid commute
+* Free shuttles with Wi-Fi
+* Education reimbursement plans
+* Donation matching etc
 
-## Ten Rules of Negotiation
+## Negotiation
 
-Key points extracted from "Ten Rules for Negotiating a Job Offer" [Part 1](http://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/) and [Part 2](https://haseebq.com/how-not-to-bomb-your-offer-negotiation/) by Haseeb Qureshi.
+Most points are extracted and paraphrased from "Ten Rules for Negotiating a Job Offer" [Part 1](http://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/) and [Part 2](https://haseebq.com/how-not-to-bomb-your-offer-negotiation/) by Haseeb Qureshi.
 
-### Get everything in writing
+Now that you've understood everything about compensation, it's time to dive into how to negotiate your compensation. This can be base salary, equity or even PTO.
 
-Note down EVERYTHING on your phone call with the recruiters as they may be helpful later on. Even if there are things that are not directly monetary, if they relate to the job, write them down. If they tell you "we're working on porting the front-end to Angular," write that down. If they say they have 20 employees, write that down. You want as much information as you can. You'll forget a lot of this stuff, and it's going to be important in informing your final decision.
 
-### Always keep the door open
+### Rule 1: Get Everything In Writing
 
-Never give up your negotiating power until you're absolutely ready to make an informed, deliberate final decision. This means your job is to traverse as many of these decision points as possible without giving up the power to continue negotiating. Very frequently, your interlocutor will try to trick you into making a decision, or tie you to a decision you didn't commit to. You must keep verbally jiu-jitsu-ing out of these antics until you're actually ready to make your final decision.
+Have everything written down as it might be helpful later. Even if the recruiter tries to forget some of the things they've mentioned, you would have everything written down.
 
-### Information is power
+Write everything down even if it doesn't directly mean money:
 
-To protect your power in the negotiation, you must protect information as much as possible. A corollary of this rule is that you should not reveal to companies what you're currently making. So given this offer, don't ask for more money or equity or anything of the sort. Don't comment on any specific details of the offer except to clarify them. Companies will ask about your current compensation at different stages in the process—some before they ever interview you, some after they decide to make you an offer. But be mindful of this, and protect information.
+* We work with Python, Spark and Scala: Write that down!
+* We offer 4 weeks PTO and 1 year maternal/paternal leave: Write that down!
+* We cover your phone bill and offer 200$ for wellness: You guessed it, Write that down!
 
-> "Yeah, [COMPANY_NAME] sounds great! I really thought this was a good fit, and I'm glad that you guys agree. Right now I'm talking with a few other companies so I can't speak to the specific details of the offer until I'm done with the process and get closer to making a decision. But I'm sure we'll be able to find a package that we're both happy with, because I really would love to be a part of the team."
+The goal is not only if the recruiter forgets but also for you to make your decision in the end. You will want to make pro's and con's so this list will help you decide!
 
-### Always be positive
+### Rule 2: Always Keep The Door Open
 
-Even if the offer is bad, it's extremely important to remain positive and excited about the company. This is because your excitement is one of your most valuable assets in a negotiation.
+Now that you have the offer, the ball is in your court. The company has spent hundreds of offers and thousands of dollars to give you this offer. THEY WANT YOU! So, do not give up negotiation power until you are ready to make an informed final decision.
 
-Despite whatever is happening in the negotiation, give the company the impression that 1) you still like the company, and that 2) you're still excited to work there, even if the numbers or the money or the timing is not working out. Generally the most convincing thing to signal this is to reiterate you love the mission, the team, or the problem they're working on, and really want to see things work out.
+Very often, recruiters will try to trick you into accepting an offer. They might say something along the lines of 
 
-### Don't be the decision maker
+> "We're very happy to extend you an offer! Here are the details of your compensation! What do you think? Can you give me your decision?"
 
-Even if you don't particularly care what your friends/family/husband/mother thinks, by mentioning them, you're no longer the only person the recruiter needs to win over. There's no point in them trying to bully and intimidate you; the "true decision-maker" is beyond their reach. This is a classic technique in customer support and remediation. It's never the person on the phone's fault, they're just some poor schmuck doing their job. It's not their decision to make. This helps to defuse tension and give them more control of the situation.
+> "We're very happy to extend you an offer! Here are the details of your compensation! What do you think? This offer is the best we can do and the hiring manager needs a decision asap to start your onboarding process"
+
+This is the time you shouldn't panic. Just remember, they want you! They won't lose you just because you asked for more time unless it's an **exploding offer**.
+
+You need to have some backup lines ready to push the recruiter off and make a decision later.
+
+### Rule 3: Information Is Power
+
+Keep the mystery in the negotiation. The information you have with you is a powerful tool.
+Try to give out as little information as possible.
+
+When a recruiter initially gives you an offer: do not comment on the offer, do not try to negotiate the salary or reveal which companies are currently in your pipeline. You could currently be interviewing for a company that you want to work for or have another offer in mind. Recruiters will do their best to squeeze these details out of you. They'll try to ask what your current compensation is or what other offers you have. **Be mindful of this and protect your information as much as possible.**
+
+A sample dialogue of what you can say when you are pressed for details:
+
+> "Yeah, [COMPANY_NAME] sounds great! I thought this was a good fit, and I'm glad that you guys agree. Right now I'm talking with a few other companies so I can't speak to the specific details of the offer until I'm done with the process and get closer to making a decision. But I'm sure we'll be able to find a package that we're both happy with because I really would love to be a part of the team."
+
+### Rule 4: Have a positive attitude
+
+Even if the offer is bad or it's not the company you want to work for, it is extremely important to **stay positive and enthusiastic** about the offer you have received. Believe it or not, your excitement for the company is a valuable asset.
+
+No matter where you are in the negotiation make sure that the impression you give is:
+* You LOVE the company and everything they do
+* You're excited to start working there
+* Compensation is not the biggest hurdle for you to work there.
+
+The way you can do this is by showing passion for the mission of the company, the engineering team, the problem space.
+
+A sample dialogue for that: 
+
+> "Hey [Recruiter Name], thanks for reaching out to me. I have been interested in [Company Name] for a while now and love the [Problem_Space] that the engineering team is working towards. For me, compensation is not a huge hurdle to work at your company but I'll need a day or two to look over the offer and I'll have the decision ready for you as soon as possible"
+
+### Rule 5: Don't Be The Decision Maker
+
+Your friends/family might already be happy with the offer you have or you don't care what they think about your offer. But, by mentioning your significant other/parents/siblings the recruiter has multiple people they need to win over. They realize that there is no point in trying to trick you into making a decision. The TRUE DECISION MAKER is beyond their reach. This allows you to defuse the tension and buy you more time to make an informed decision.
+
+A sample dialogue for that: 
 
 > I'll look over some of these details and discuss it with my [FAMILY/CLOSE_FRIENDS/SIGNIFICANT_OTHER]. I'll reach out to you if I have any questions. Thanks so much for sharing the good news with me, and I'll be in touch!
 
 It's much harder to pressure someone if they're not the final decision-maker. So take advantage of that.
 
-### Have alternatives
+### Rule 6: Have Alternatives
 
-If you're already in the pipeline with other companies (which you should be if you're doing it right), you should proactively reach out and let them know that you've just received an offer. Try to build a sense of urgency. Regardless of whether you know the expiration date, all offers expire at some point, so take advantage of that.
+If you have multiple offers, you have leverage. The recruiters know that they are not the only people interested in you so you can use offers to negotiate and increase compensation with all parties involved. 
+
+You should proactively reach out to the other companies in your pipeline. If you are in the initial stages of interviewing with a company let them know that you have received an offer(s) and to expedite the interview process. If you have other offers, let them know that you have gotten a competing offer and schedule a chat with the recruiter. Build a sense of urgency. All offers have an expiration date so take advantage of that.
+
 
 > Hello [PERSON],
 >
-> I just wanted to update you on my own process. I've just received an offer from [COMPANY] which is quite strong. That said, I'm really excited about [YOUR AMAZING COMPANY] and really want to see if we can make it work. Since my timeline is now compressed, is there anything you can do to expedite the process?
+> I just wanted to update you on my process. I've just received an offer from [COMPANY] which is quite strong. That said, I'm excited about [YOUR AMAZING COMPANY] and want to see if we can make it work. Since my timeline is now compressed, is there anything you can do to expedite the process?
 
-Should you specifically mention the company that gave you an offer? Depends. If it's a well-known company or a competitor, then definitely mention it. If it's a no-name or unsexy company, you should just say you received an offer. If it's expiring soon, you should mention that as well.
+The big question here is: Should I mention the name of the company from which I have an offer? That depends on which company it is. Companies want to snag you before other big companies or their competitors get their hands on you. So if it's a **Sexy** name, drop it. If it's a **direct competitor**, drop the name.
 
-Either way, send out a letter like this to every single company you're talking to. No matter how hopeless or pointless you think your application is, you want to send this signal to everyone who is considering you in the market.
+Ex: If you are talking to a recruiter from Uber and you have an offer from Lyft, definitely mention it. The same goes for if you have an offer from Box and another from DropBox.
 
-Companies care that you've received other offers. They care because each company knows that their own process is noisy, and the processes of most other companies are also noisy. But a candidate having multiple offers means that they have multiple weak signals in their favor. Combined, these converge into a much stronger signal than any single interview. It's like knowing that a student has a strong SAT score, and GPA, and won various scholarships. Sure, it's still possible that they're a dunce, but it's much harder for that to be true.
+Even if the companies are not direct competitors but are big tech companies, mention their names.
+If it's a no-name, small startup, etc there is no point mentioning this. Just say that you have an offer from them and it is expiring on this date.
 
-This is not to say that companies respond proportionally to these signals, or that they don't overvalue credentials and brands. They do. But caring about whether you have other offers and valuing you accordingly is completely rational.
+Companies know the interview process in other companies and they also know how easy it is to weed people out. Candidates who have multiple offers signal that they have what it takes to pass multiple rounds of interviews and multiple companies and it works in the candidate's favor.
 
 Tell other companies that you've received offers. Give them more signals so that they know you're a valued and compelling candidate. And understand why this changes their mind about whether to interview you.
 
 Your goal should be to have as many offers overlapping at the same time as possible. This will maximize your window for negotiating.
 
-Have a strong BATNA (Best Alternative To a Negotiated Agreement) and communicate it.
 
-> I 've received another offer from [OTHER CORP] that's very compelling on salary, but I really love the mission of [YOUR COMPANY] and think that it would overall be a better fit for me.
+> I 've received another offer from [OTHER CORP] that's very compelling on salary, but I love the mission of [YOUR COMPANY] and think that it would overall be a better fit for me.
 
-> I'm also considering going back to grad school and getting a Master's degree in Postmodern Haberdashery. I'm excited about [YOUR COMPANY] though and would love to join the team, but the package has to make sense if I'm going to forego a life of ironic hatmaking.
+> I'm also considering going back to grad school and getting a Master's degree in [Something]. I'm excited about [YOUR COMPANY] though and would love to join the team, but the package has to make sense if I'm going to forego a life of [Something].
 
-### Proclaim reasons for everything
+### Rule 7: Have Reasons For Everything
 
-It's kind of a brain-hack, both for yourself and for your negotiating partner. Just stating a reason (any reason) makes your request feel human and important. It's not you being greedy, it's you trying to fulfill your goals.
+State a reason (any reason) that makes your request feel important. It doesn't mean that you are greedy but it's just that you are trying to achieve your goals.
 
-The more unobjectionable and sympathetic your reason, the better. If it's medical expenses, or paying off student loans, or taking care of family, you'll bring tears to their eyes.
+Try to give more sympathetic reasons:
+* Medical bills
+* Student loans
+* Children to take care of.
+* Parents to take care of.
 
-Just go with it, state a reason for everything, and you'll find recruiters more willing to become your advocate.
+Just have a reason for everything and the recruiter is more than likely to oblige to your requests.
 
-### Be motivated by more than just money
 
-You should be motivated by money too of course, but it should be one among many dimensions you're optimizing for. How much training you get, what your first project will be, which team you join, or even who your mentor will be—these are all things you can and should negotiate.
+### Rule 8: Be Motivated By More Than Just Money
+This might seem either obvious or hard depending on who you are. Remember that most offers will differentiate at most 20-30K. While this is a lot of money, in your long term career in tech this is peanuts. 
 
-Of course, to negotiate well you need to understand the other side's preferences. You want to make the deal better for both of you.
+Try to prioritize the following:
+* What the company does; Are you interested in Self-driving? Then pick a company that lets you do machine learning instead of a higher paying backend role.
+* How good is the manager? The manager will be a mentor during the time that you will be at the company so it's important to be a good judge for that.
+* Do you like the company or you want to join it because it's a brand name?
 
-### Understand what they value
+If you are going to be unhappy at the company then it's not good for you and the company. So, it's best to make a hard decision early on.
 
-Remember that you can always get salary raises as you continue to work at the company, but there's only one point at which you can get a signing bonus.
 
-The easiest thing for a company to give though is stock (if the company offers stock). Companies like giving stock because it invests you in the company and aligns interests. It also shifts some of the risk from the company over to you and burns less cash.
+### Rule 8: Show belief in your talent 
 
-### Be winnable
+This goes to more than giving the company that you like that. (Which is something you should keep doing as discussed earlier.) More than that, you should know your worth and have belief in what you can bring to the table.
 
-This is more than just giving the company the impression that you like them (which you continually should). But more so that you must give any company you're talking to a clear path on how to win you. Don't bullshit them or play stupid games. Be clear and unequivocal with your preferences and timeline.
+Don't play any games. Just be straight to the point, be clear with your preferences and keep mentioning your time.
 
-Don't waste their time or play games for your own purposes. Even if the company isn't your dream company, you must be able to imagine at least some package they could offer you that would make you sign. If not, politely turn them down.
+If you are not going to work for a company, politely let them know.
+
+
+## Conclusion
+
+Thank you for making it this far. I know it was a long read but I hope that I could help get you an insight into the process. This is the end of the series on [How To Get A Job In Tech](/series/how-to-get-a-job-in-tech). If you liked it, let me know [My Email](mailto:gautamtata.blog@gmail.com) or you can buy me a coffee at paypal.me/GautamTata 
+
+I look forward to seeing you in other series about climate change, Machine learning or random-stuff! Thanks for reading.
+
+Gautam
+
+
+## Other Resources
+
+* [levels.fyi](https://www.levels.fyi/) - Check live compensation at top tech companies.
+* [Glassdoor Salaries](https://www.glassdoor.com/Salaries/index.htm) - Get a salary estimate
+* 
