--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -18,7 +18,7 @@ prev: "/blog/get-a-job-2/"
 next: "/blog/get-a-job-4/"
 ---
 
-![Interview](https://github.com/gautamtata/blog/blob/master/static/media/tech5.jpg?raw=true)
+![](https://github.com/gautamtata/blog/blob/master/static/media/tech6.jpg?raw=true)
 
 # Introduction and Background
 
@@ -161,7 +161,7 @@ Mock interviews are probably the most important aspect of interview prep. Gettin
 * [Pramp](www.pramp.com): Practice Mock Interviews with peers for free.
 * [interviewing.io](https://interviewing.io/): Practice Anonymous interviews.
 
-* [ME](gautamtata.blog@gmail.com): Email me (Buy me a coffee) and I'd be happy to help to chat about interviewing or even conducting mock interviews -- In-person and Remote :)
+* [ME](mailto:gautamtata.blog@gmail.com): Email me (Buy me a coffee) and I'd be happy to help to chat about interviewing or even conducting mock interviews -- In-person and Remote :)
 
 
 ## Conlusion
@@ -170,7 +170,7 @@ Preparing for Interviews is tough. I know, I failed dozens of interviews and pre
 
 It's easy to feel nervous right now but trust me, it's a numbers game. Keep interviewing, keep practicing and block all other noise out. It doesn't matter what people say, what family says: You are good enough to work here. All it takes is a lot of practice and a bit of luck.
 
-I'd love to hear about any job updates or if I can help in any way so please reach out at [My Email](gautamtata.blog@gmail.com).
+I'd love to hear about any job updates or if I can help in any way so please reach out at [My Email](mailto:gautamtata.blog@gmail.com).
 
 The last part of the series covers Negotiation. See you there!
 
