grammatical changes for blog 4

--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -236,4 +236,5 @@ Gautam
 
 * [levels.fyi](https://www.levels.fyi/) - Check live compensation at top tech companies.
 * [Glassdoor Salaries](https://www.glassdoor.com/Salaries/index.htm) - Get a salary estimate
-* 
+* [How I negotiated a $300,000 job offer in Silicon Valley](How I negotiated a $300,000 job offer in Silicon Valley)
+* [10 Rules for Negotiation](http://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/) 
